--- a/myportfolio.html
+++ b/myportfolio.html
@@ -86,7 +86,7 @@
                             <h2>Business Analyst</h2>
                             <p>Since the beginning of my course at the University of Johannesburg, I've always looked at how effective IT would be in the business. I have come to learn a lot of attributes that contribute in making the implementation of technological skills in business successful especially in the 4IR. </p>
                             <br />
-                            <a href="docs/BIT System Legion_2nd_Pilot_FINAL_ver final.pptx" class="read">Learn more</a>
+                            <a href="docs/Black Holographic Portfolio Cover Document (1).pdf" class="read">Learn more</a>
                            
                         </div>
                         
