--- a/myportfolio.html
+++ b/myportfolio.html
@@ -18,7 +18,7 @@
             <a href="#skills" style="--i:3">Skills</a>
             <a href="#services" style="--i:4">Services</a>
             <a href="#portfolio" style="--i:5">Portfolio</a>
-            <a href="#contact" style="--i:5">Conact</a>
+            <a href="#contacte" style="--i:5">Contact</a>
 
          </nav>
     </header>
@@ -33,7 +33,9 @@
             <div class="home-section">
                 <a href="https://www.linkedin.com/in/blessing-leso-724052183" style="--i:1"><i class='bx bxl-linkedin-square'></i></a>
                 <a href="https://wa.me/+27647328373" style="--i:2"><i class='bx bxl-whatsapp' ></i></a>
-                <a href="https://x.com/blessing_leso?t=CUebOPI9Lcwh1j0WLSBPVw&s=09" style="--i:4"><i class='bx bxl-twitter' ></i></a>
+                <a href="https://x.com/blessing_leso?t=CUebOPI9Lcwh1j0WLSBPVw&s=09" style="--i:3"><i class='bx bxl-twitter' ></i></a>
+                <a href="https://github.com/blessing-leso" style="--i:4"><i class='bx bxl-github'></i></a>
+
             </div>
             <a href="docs/Blessing_Leso_CV (3).pdf" class="button-box">More About Me</a>
             </div>
@@ -171,14 +173,14 @@
         </div>
     </section>
 
-    <section class="contact" id="contact">
-        <div class="contact-text">
-            <h2>Contact<span>Me</span></h2>
-            <div class="contact-list">
+    <section class="contacte" id="contacte">
+        <div class="contacte-text">
+            <h2>contacte<span>Me</span></h2>
+            <div class="contacte-list">
                 <li><i class="bx bxs-send"></i>blessingitlotlengleso@gmail.com</li>
                 <li><i class="bx bxs-phone"></i>0647328373</li>
             </div>
-            <div class="contact-form">
+            <div class="contacte-form">
                 <form action="">
                     <input type="" placeholder="Enter Your Name" required>
                     <input type="email" placeholder="Enter Your Email adress" required>
